fix: adjust AppShortcutButton position to improve visibility

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,4 +1,13 @@
+html, body, #__next {
+  height: 90vh;
+  min-height: 90vh;
+  max-height: 90vh;
+  margin: 0;
+  padding: 0;
+}
+
 html { overflow-y: scroll; }
+
 img {
 pointer-events: none;     
 -webkit-user-drag: none;  
